service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service-svc-XX
  namespace: lab-malmo
spec:
  ports:
    - port: 8080
  selector:
    app: cart-service-XX
  type: NodePort
