ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cart-service-X-ingress
  namespace: lab-malmo
spec:  
  rules:
    - http:
      paths:      
        - path: /cart-X
          backend:
            serviceName: cart-service-svc-X
            servicePort: 8080
